--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -1,3 +1,8 @@
 <%# TODO add a loading button %>
 <!-- _dw TODO create a greeting presenter -->
+<nav class='show-nav'>
+  <ul>
+    <li><a href="/" title="by hashPage">by hashPage</a></li>
+  </ul>
+</nav>
 <%= render partial: 'fetchers/show/banner' %>
