start Lewis theme

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,4 +8,6 @@
 @import "modules/landing";
 @import "modules/vertical_tabs";
 
-@import 'layouts/containers'
+@import 'layouts/containers';
+
+@import 'themes/lewis';
