--- a/app/views/themes/lewis_show.html.erb
+++ b/app/views/themes/lewis_show.html.erb
@@ -1,27 +1,5 @@
 <div class="l-container">
-  <header id="header" class="">
-    <div class="l-logo">
-      <%= image_tag 'logo.gif', style:'width: 100px;' %>
-      <p>lewis</p>
-    </div>
-    <div class="l-nav">
-      <div class="title">
-        <p>menu</p>
-      </div>
-      <nav>
-        <ul>
-          <li><a href="/themes/lewis" title="">home</a></li>
-          <li><a href="" title="">about</a></li>
-          <li><a href="" title="">contact</a></li>
-          <li>----------</li>
-          <li><a href="" title="">#books</a></li>
-          <li><a href="" title="">#faith</a></li>
-          <li><a href="" title="">#rants</a></li>
-          <li><a href="" title="">#art</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header><!-- /header -->
+  <%= render 'themes/lewis_header' %>
   <div class="l-wrapper">
     <div class="l-content">
       <div class="list">
@@ -40,13 +18,13 @@
             </div>
             <div class="text">
               <p>
-                this is a tweet about a book quote that I love.
+                Slow and steady wins the race.
               </p>
             </div>
             <div class="actions">
               <div class='details'><a href="" title="details">details</a></div>
               <ul class='btns'>
-                <li><a href="" title="May 15, 5:03 pm">May 15, 5:03 pm</a></li>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
                 <li><a href="" title="reply">reply</a></li>
                 <li><a href="" title="retweet">retweet</a></li>
                 <li><a href="" title="favorite">favorite</a></li>
@@ -55,17 +33,17 @@
           </div>
           <div class="tweet">
             <div class="image">
-              <%= image_tag 'boat.png' %>
+              <%= image_tag '1.jpg' %>
             </div>
             <div class="text">
               <p>
-                this is a tweet about a book quote that I love.
+                A smooth sea never made a skilled mariner.
               </p>
             </div>
             <div class="actions">
               <div class='details'><a href="" title="details">details</a></div>
               <ul class='btns'>
-                <li><a href="" title="May 15, 5:03 pm">May 15, 5:03 pm</a></li>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
                 <li><a href="" title="reply">reply</a></li>
                 <li><a href="" title="retweet">retweet</a></li>
                 <li><a href="" title="favorite">favorite</a></li>
@@ -74,17 +52,93 @@
           </div>
           <div class="tweet">
             <div class="image">
-              <%= image_tag 'boat.png' %>
+              <%= image_tag '2.jpg' %>
             </div>
             <div class="text">
               <p>
-                this is a tweet about a book quote that I love.
+                The slower that you go the greener the grass grows.
               </p>
             </div>
             <div class="actions">
               <div class='details'><a href="" title="details">details</a></div>
               <ul class='btns'>
-                <li><a href="" title="May 15, 5:03 pm">May 15, 5:03 pm</a></li>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
+                <li><a href="" title="reply">reply</a></li>
+                <li><a href="" title="retweet">retweet</a></li>
+                <li><a href="" title="favorite">favorite</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="tweet">
+            <div class="image">
+              <%= image_tag '3.jpg' %>
+            </div>
+            <div class="text">
+              <p>
+                He leads me beside still waters.
+              </p>
+            </div>
+            <div class="actions">
+              <div class='details'><a href="" title="details">details</a></div>
+              <ul class='btns'>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
+                <li><a href="" title="reply">reply</a></li>
+                <li><a href="" title="retweet">retweet</a></li>
+                <li><a href="" title="favorite">favorite</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="tweet">
+            <div class="image">
+              <%= image_tag '4.jpg' %>
+            </div>
+            <div class="text">
+              <p>
+                I want to put a boat in that.
+              </p>
+            </div>
+            <div class="actions">
+              <div class='details'><a href="" title="details">details</a></div>
+              <ul class='btns'>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
+                <li><a href="" title="reply">reply</a></li>
+                <li><a href="" title="retweet">retweet</a></li>
+                <li><a href="" title="favorite">favorite</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="tweet">
+            <div class="image">
+              <%= image_tag '5.jpg' %>
+            </div>
+            <div class="text">
+              <p>
+                A flying boat.
+              </p>
+            </div>
+            <div class="actions">
+              <div class='details'><a href="" title="details">details</a></div>
+              <ul class='btns'>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
+                <li><a href="" title="reply">reply</a></li>
+                <li><a href="" title="retweet">retweet</a></li>
+                <li><a href="" title="favorite">favorite</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="tweet">
+            <div class="image">
+              <%= image_tag '6.jpg' %>
+            </div>
+            <div class="text">
+              <p>
+                Boats come in many shapes and sizes.
+              </p>
+            </div>
+            <div class="actions">
+              <div class='details'><a href="" title="details">details</a></div>
+              <ul class='btns'>
+                <li><a href="" title=""><%= rand(360).days.ago.strftime("%B %e, %Y") %></a></li>
                 <li><a href="" title="reply">reply</a></li>
                 <li><a href="" title="retweet">retweet</a></li>
                 <li><a href="" title="favorite">favorite</a></li>
@@ -95,4 +149,5 @@
       </div>
     </div>
   </div>
+  <%= render 'themes/lewis_footer' %>
 </div>
