Add a gumroad shop module

--- a/app/views/themes/_lewis_footer.html.erb
+++ b/app/views/themes/_lewis_footer.html.erb
@@ -4,6 +4,7 @@
       <li><a href="/themes/lewis" title="">home</a></li>
       <li><a href="/themes/lewis/about" title="">about</a></li>
       <li><a href="/themes/lewis/contact" title="">contact</a></li>
+      <li><a href="/themes/lewis/shop" title="">shop</a></li>
     </ul>
     <ul>
       <li><a href="/themes/lewis/boats" title="">#boats</a></li>
