--- a/app/views/themes/_lewis_header.html.erb
+++ b/app/views/themes/_lewis_header.html.erb
@@ -12,6 +12,7 @@
         <li><a href="/dave" title="">home</a></li>
         <li><a href="/themes/lewis/about" title="">about</a></li>
         <li><a href="/themes/lewis/contact" title="">contact</a></li>
+        <li><a href="/themes/lewis/shop" title="">shop</a></li>
       </ul>
       <hr>
       <ul>
