--- a/app/views/layouts/hashpages.html.erb
+++ b/app/views/layouts/hashpages.html.erb
@@ -16,7 +16,11 @@
   <![endif]-->
 </head>
 <body>
-  <%= yield %>
+  <div class="l-container">
+    <%= render 'themes/lewis_header' %>
+    <%= yield %>
+    <%= render 'themes/lewis_footer' %>
+  </div>
   <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
