--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -18,7 +18,7 @@
             </div>
             <div class="text">
               <p>
-                <%= t.text %>
+                <%= only_text(t.text) %>
               </p>
             </div>
             <div class="actions">
