--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -7,7 +7,7 @@
             <h1><%= @custom_tweets.first.username %></h1>
           </div>
           <div class="sub-title">
-            <%= @custom_tweets.count %> tweets
+            <%= params[:hashtag] %>
           </div>
         </div>
         <div class="tweets">
