--- a/app/views/fetchers/index.html.erb
+++ b/app/views/fetchers/index.html.erb
@@ -1,5 +1,5 @@
 <div class="l-container">
-  <%= render 'themes/lewis_header' %>
+  <%= render 'partials/nav' %>
   <div class="l-wrapper">
     <div class="l-content">
       <div class="list">
