--- a/app/views/fetchers/show.html.erb
+++ b/app/views/fetchers/show.html.erb
@@ -1,4 +1,5 @@
 <div class="l-container">
+  <%= render 'partials/nav' %>
   <div class="l-wrapper">
     <div class="l-content">
       <div class="list">
