--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,18 +13,29 @@
   <!-- <meta name="description" content=""> -->
   <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
-</head>
-<body>
-  <%= yield %>
-  <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    <![endif]-->
+  </head>
+  <body>
+    <div class="l-container">
+      <%= render 'partials/nav' %>
+      <div class="l-wrapper">
+        <div class="l-content">
+          <div class="list">
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+      <%= render 'partials/footer' %>
+    </div>
+
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-52536027-3', 'auto');
-      ga('send', 'pageview');
-    </script>
+    ga('create', 'UA-52536027-3', 'auto');
+    ga('send', 'pageview');
+  </script>
 </body>
 </html>
