--- a/app/assets/stylesheets/modules/_landing.scss
+++ b/app/assets/stylesheets/modules/_landing.scss
@@ -20,7 +20,19 @@ h3 {
 
 p {
   font-weight: 300;
-  font-size: 1.2em;
+  font-size: 1.5em;
+  padding: 0;
+  margin: 0;
+  @include media($medium-screen) {
+    font-size: 1.8em;
+  }
+}
+
+.item p {
+  font-weight: 300;
+  font-size: 3em;
+  padding: 0;
+  margin: 0;
   @include media($medium-screen) {
     font-size: 1.8em;
   }
