Add a contact page

--- a/app/views/partials/_nav_list.html.erb
+++ b/app/views/partials/_nav_list.html.erb
@@ -2,6 +2,7 @@
   <ul>
     <li><%= link_to 'home', "/#{@username}" %></li>
     <li><%= link_to 'about', "/#{@username}/about" %></li>
+    <li><%= link_to 'contact', "/#{@username}/contact" %></li>
   </ul>
   <div><hr></div>
   <ul>
