--- a/app/views/fetchers/contact.html.erb
+++ b/app/views/fetchers/contact.html.erb
@@ -1,7 +1,10 @@
-<h1>Contact <%= @username %></h1>
+<h2>Contact @<%= @username %></h2>
+<p class='fa fa-twitter'>
+  <%= link_to @username, "http://www.twitter.com/#{@username}" %>
+</p>
 <p>
   <% @contact_tweets.each do |t| %>
-    <span>email: </span>
+    <span>#email </span>
     <%= link_to tweet_path(t), target: '_blank' do %>
       <%= only_text(t.text) %>
       <% if  t.image.present? %>
