wip - theme styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,8 @@
 
 @import 'layouts/containers';
 
-@import 'themes/lewis';
+// @import 'themes/lewis';
+@import 'themes/list_light';
+@import 'themes/grid_light';
 
 @import 'lib/animate';
