--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,11 @@
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body class='grid-light'>
     <div class="l-container">
       <div class="l-wrapper">
         <div class="l-content">
-          <div class="list">
             <%= yield %>
-          </div>
         </div>
       </div>
     </div>
