--- a/app/views/partials/_nav_list.html.erb
+++ b/app/views/partials/_nav_list.html.erb
@@ -6,7 +6,7 @@
   </ul>
   <div><hr></div>
   <ul>
-    <% @hashtags.each do |tag| %>
+    <% @presenter.hashtags.each do |tag| %>
       <li><%= link_to tag, "/#{@username}/#{tag}" %></li>
     <% end %>
   </ul>
