--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,7 +1,8 @@
 <header id="header" class="">
   <div class="l-nav">
     <div class="title">
-      <p>menu</p>
+      <%= image_tag 'tall.jpg' %>
+      <h1><%= link_to 'Dave Woodall', "http://www.twitter.com/#{@username}", target: '_blank' %></h1>
     </div>
     <%= render 'partials/nav_list' %>
   </div>
