--- a/app/views/layouts/marty/app.html.erb
+++ b/app/views/layouts/marty/app.html.erb
@@ -6,7 +6,9 @@
   <%= stylesheet_link_tag    'themes/marty/application', media: 'all' %>
 </head>
   <body>
-    <%= yield %>
+    <div class="l-container">
+      <%= yield %>
+    </div>
     <%= render partial: 'shared/google_analytics' %>
-</body>
+  </body>
 </html>
