--- a/app/views/themes/marty/index.html.erb
+++ b/app/views/themes/marty/index.html.erb
@@ -1,6 +1,6 @@
-<div class="grid">
+<div class="l-content tweet-grid">
   <% @presenter.custom_tweets.each do |t| %>
-      <div class="grid-item"><%= image_tag t.image if t.image.present? %></div>
+    <div class="tweet"><%= image_tag t.image if t.image.present? %></div>
   <% end %>
 </div>
 
