--- a/app/views/layouts/marty/app.html.erb
+++ b/app/views/layouts/marty/app.html.erb
@@ -4,6 +4,7 @@
   <%= render partial: 'shared/head' %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'themes/marty/application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
 </head>
   <body>
     <div class="l-container">
